<resources>
    <string name="app_name">giftbook</string>
    <string name="action_settings">Settings</string>
    <string name="net_work_error">网络出问题了</string>
    <string name="password_confirm">密码不一致，请重新输入</string>
    <string name="not_null">请您填写全部内容</string>
    <string name="register_success">注册成功</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">用户名或密码错误</string>
    <string name="password_error">输入密码错误</string>
    <string name="update_password_failed">修改密码错误</string>
    <string name="update_password_success">修改密码成功</string>success

    <string name="app_chinese_name">礼集</string>
    <string name="app_english_name">礼集</string>
    <string name="app_chinese_slogan">“让你我得偿所愿”</string>
    <string name="app_english_slogan">"May you get you wish"</string>
    <string name="comment">评论</string>
    <string name="payment">赞助</string>
    <string name="publish_comment">发表评论...</string>
    <string name="address">--</string>
    <string name="char_money">￥</string>
    <string name="un_know">--</string>
    <string name="get_image_failed">图片获取失败</string>
    <string name="avatar_upload_success">头像更换成功</string>
    <string name="user_info_upload_success">修改资料成功</string>

    <string name="content_not_be_null">内容不能为空</string>
    <string name="wish_card_upload_success">心愿单上传成功</string>

    <string name="comment_send_success">评论成功</string>

    <string name="wish_choose_right_receive_code">请选择正确的收钱码图片</string>


    <string name="update_user_nickname">填写新昵称</string>
    <string name="update_user_signature">填写新签名</string>
    <string name="update_user_gender">填写您的性别</string>


    <string name="register_input_phone">请输入常用手机号</string>
    <string name="register_set_password">设置密码</string>
    <string name="register_confirm_password">确认密码</string>
    <string name="register_set_nickname">设置昵称</string>
    <string name="register_set_alipay">请输入常用支付宝账号</string>
    <string name="register_input_identify_code">请输入收到的验证码</string>
    <string name="get_identify_code">获取验证码</string>
    <string name="register">注册</string>
    <string name="protocol">点击注册代表您已同意《用户注册协议》</string>
    <string name="login_in_register_page">密码登录</string>

    <string name="login_phone">请输入已验证的手机号</string>
    <string name="login_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="register_now">立即注册</string>

    <string name="activity_main_wish_menu">心愿</string>
    <string name="activity_main_friend_menu">亲友</string>
    <string name="activity_main_personal_menu">我的</string>

    <string name="fragment_wish_title">心愿湖</string>
    <string name="activity_main_switch_off">off</string>
    <string name="activity_main_switch_on">on</string>



    <string name="activity_wish_details_type">类型：</string>
    <!--<string name="activity_wish_details_comment">&#160;&#160;发表评论</string>-->


    <string name="test">为消费者提供最权威的年货买什么好,年货送什么好的知识,是消费者们了解春节送礼的重要参考依据,</string>

    <string name="fragment_personal_payment_record">个人账单</string>
    <string name="fragment_personal_nickname">Chilies</string>
    <string name="no_signature">这位小主很懒，还没有个性签名。</string>
    <string name="fragment_personal_phone_number">--</string>
    <string name="fragment_personal_sex">神秘</string>
    <string name="fragment_personal_wish_record">心愿记录</string>

    <string name="activity_settings_update_userInfo">修改资料</string>
    <string name="activity_settings_update_password">修改密码</string>
    <string name="activity_settings_logout">退出登录</string>


    <string name="activity_update_personal_information_phone_number">手机号</string>
    <string name="activity_update_personal_information_nickname">昵&#160;&#160;&#160;&#160;称</string>
    <string name="activity_update_personal_information_signature">签&#160;&#160;&#160;&#160;名</string>
    <string name="activity_update_personal_information_alipay">支付宝</string>
    <string name="activity_update_personal_information_sex">性&#160;&#160;&#160;别</string>
    <string name="activity_update_personal_information_address">所在地</string>
    <string name="activity_update_personal_information_update">保存修改</string>

    <string name="activity_payment_record_stage">本年度</string>
    <string name="activity_payment_record_budget">支出 ￥2000.20  收入 ￥300.59</string>

    <string name="item_activity_payment_record_listview_nickname">李白</string>
    <string name="to_fellow">关注</string>
    <string name="already_fellow">已关注</string>
    <string name="fellow_each_other">已关注</string>
    <string name="item_activity_payment_record_listview_time">2017-05-25</string>
    <string name="item_activity_payment_record_listview_money">+2000.80</string>


    <string name="fragment_wish_friend">亲友团</string>
    <string name="fragment_wish_friend_new_friend">新的朋友</string>





</resources>
