<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_chinese_name"
            android:src="@drawable/logo"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/app_chinese_name"
                android:textColor="@color/firstTitle"
                android:textSize="40sp"
                android:textStyle="normal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="12dp"
                android:layout_marginTop="15dp"
                android:text="@string/app_chinese_slogan"
                android:textColor="@color/thirdTitle"
                android:textSize="12sp"/>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/register_input_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_input_phone"
                android:inputType="phone"
                android:padding="10dp"
                android:textSize="14sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/register_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_set_password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textSize="14sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/register_input_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_confirm_password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textSize="14sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/register_input_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_set_nickname"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textSize="14sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/register_input_alipay_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_set_alipay"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textSize="14sp"/>
        </LinearLayout>

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:orientation="horizontal">-->

        <!--<EditText-->
        <!--android:id="@+id/register_input_identify_code"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:hint="@string/register_input_identify_code"-->
        <!--android:inputType="textPassword"-->
        <!--android:padding="5dp"-->
        <!--android:textSize="14sp"/>-->

        <!--<TextView-->
        <!--android:id="@+id/register_get_identify_code"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="2"-->
        <!--android:padding="5dp"-->
        <!--android:text="@string/get_identify_code"-->
        <!--android:textColor="@color/firstTitle"-->
        <!--android:textSize="14sp"/>-->
        <!--</LinearLayout>-->

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/divider"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="-15dp"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightColorButton"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/register_agreement_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/protocol"
            android:textSize="14sp"/>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/register_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="-20dp"
            android:padding="20dp"
            android:text="@string/login_in_register_page"
            android:textColor="@color/firstTitle"
            android:textSize="16sp"
            android:textStyle="normal"
            />
    </RelativeLayout>


</LinearLayout>
