<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/background"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/item_fragment_wish_avatar_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:src="@drawable/avatar"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/item_fragment_wish_username_text"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:text="张三李四"
                android:textColor="@color/firstTitle"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/item_fragment_wish_time_text"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginTop="5dp"
                android:text="2017-05-25"
                android:textColor="@color/secondTitle"
                android:textSize="15sp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/item_fragment_wish_isWishCard_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/wish_card"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="4"
            android:text="@string/test"
            android:textColor="@color/thirdTitle"
            android:textSize="15sp"/>

        <ImageView
            android:layout_width="400dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/img"/>

        <LinearLayout
            android:id="@+id/dashLine"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/dash_line"
            android:orientation="horizontal"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/comments"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/comment"
                android:textSize="15sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/payment"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/payment"
                android:textSize="15sp"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>